--- a/examples/dapp.html
+++ b/examples/dapp.html
@@ -232,7 +232,7 @@
           ],
           [beacon.Regions.NORTH_AMERICA_EAST]: []
         },
-        featuredWallets: ['kukai', 'metamask', 'airgap'],
+        featuredWallets: ['kukai', 'metamask', 'mavryk'],
         network: {
           type: beacon.NetworkType.GHOSTNET
         },
