--- a/examples/abstracted-account.html
+++ b/examples/abstracted-account.html
@@ -14,7 +14,7 @@
       window.beaconSdkDebugEnabled = true
     </script>
     <script
-      src="https://unpkg.com/@taquito/taquito@17.0.0/dist/taquito.min.js"
+      src="https://unpkg.com/@mavrykdynamics/taquito@17.5.2/dist/taquito.min.js"
       crossorigin="anonymous"
       integrity="sha384-EBq3+NByq2GkaEwD9J3S2wR5nDTiQaTym0+Z2HP4iMNrfZJNdtPzflpM7TOBE/Di"
     ></script>
@@ -68,7 +68,7 @@
 
     <script>
       // BeaconWallet doesn't have an unpkg, so this is litteraly a copy/paste of the github:
-      // https://github.com/ecadlabs/taquito/blob/a763b7b3cf202863a7582f34dca27679e7cb2e9b/packages/taquito-beacon-wallet/src/taquito-beacon-wallet.ts
+      // https://github.com/mavryk-network/mavryk-taquito/blob/a763b7b3cf202863a7582f34dca27679e7cb2e9b/packages/taquito-beacon-wallet/src/taquito-beacon-wallet.ts
       // Also there's all the required utils functions to make the transaction works
 
       const TZ_DECIMALS = 6
