Atlasnet integration + Beacon update

--- a/examples/dapp-v3.html
+++ b/examples/dapp-v3.html
@@ -128,7 +128,7 @@
           projectId: '97f804b46f0db632c52af0556586a5f3',
           relayUrl: 'wss://relay.walletconnect.com'
         }
-        // preferredNetwork: beacon.NetworkType.DELPHINET
+        // preferredNetwork: beacon.NetworkType.ATLASNET
         // matrixNodes: ['test.papers.tech', 'test2.papers.tech', 'matrix.papers.tech']
         // matrixNodes: ['beacon-node-0.papers.tech:8448']
         // matrixNodes: ['matrix.papers.tech']
@@ -222,7 +222,7 @@
           })
 
         // client
-        //   .requestPermissions(/*{ network: { type: beacon.NetworkType.DELPHINET } }*/)
+        //   .requestPermissions(/*{ network: { type: beacon.NetworkType.ATLASNET } }*/)
         //   .then((permissions) => {
         //     console.log('permissions', permissions)
         //     if (callback) {
