Mutez to Mumav and addresses verification fixed

--- a/examples/abstracted-account.html
+++ b/examples/abstracted-account.html
@@ -71,22 +71,22 @@
       // https://github.com/mavryk-network/mavryk-taquito/blob/a763b7b3cf202863a7582f34dca27679e7cb2e9b/packages/taquito-beacon-wallet/src/taquito-beacon-wallet.ts
       // Also there's all the required utils functions to make the transaction works
 
-      const TZ_DECIMALS = 6
-      const MTZ_DECIMALS = 3
+      const MV_DECIMALS = 6
+      const MMV_DECIMALS = 3
 
       function getDecimal(format) {
         switch (format) {
-          case 'tz':
-            return TZ_DECIMALS
-          case 'mtz':
-            return MTZ_DECIMALS
-          case 'mutez':
+          case 'mv':
+            return MV_DECIMALS
+          case 'mmv':
+            return MMV_DECIMALS
+          case 'mumav':
           default:
             return 0
         }
       }
 
-      function format(from = 'mutez', to = 'mutez', amount) {
+      function format(from = 'mumav', to = 'mumav', amount) {
         const bigNum = new BigNumber(amount)
         if (bigNum.isNaN()) {
           return amount
@@ -104,14 +104,14 @@
         fee = 10000,
         gasLimit = 10600,
         storageLimit = 257,
-        mutez = false
+        mumav = false
       }) => {
         const operation = {
           kind: taquito.OpKind.TRANSACTION,
           fee,
           gas_limit: gasLimit,
           storage_limit: storageLimit,
-          amount: mutez ? amount.toString() : format('tz', 'mutez', amount).toString(),
+          amount: mumav ? amount.toString() : format('mv', 'mumav', amount).toString(),
           destination: to,
           parameters: parameter
         }
