--- a/examples/dapp-v3-sapling.html
+++ b/examples/dapp-v3-sapling.html
@@ -53,9 +53,9 @@
     <br /><br />
     <button id="requestPermission">Request Permission</button>
     <br /><br />
-    <button id="sendToSelf">Send 1 mutez to myself</button>
+    <button id="sendToSelf">Send 1 mumav to myself</button>
     <br /><br />
-    <button id="sendToSelfWithPrepare">Send 1 mutez to myself (with 1s prepare delay)</button>
+    <button id="sendToSelfWithPrepare">Send 1 mumav to myself (with 1s prepare delay)</button>
     <br /><br />
     <button id="showPrepareAndHide">Show prepare and then hide</button>
     <br /><br />
@@ -169,7 +169,7 @@
           operationDetails: [
             {
               kind: beacon.TezosOperationType.DELEGATION,
-              delegate: 'tz1MJx9vhaNRSimcuXPK2rW4fLccQnDAnVKJ'
+              delegate: 'mv1Qvep3UVZdGTV6cMQ9MHGexLNQ6oaNZmhj'
             }
           ]
         })
