--- a/examples/dapp.html
+++ b/examples/dapp.html
@@ -66,9 +66,9 @@
       Request Simulated Proof Of Event Challenge
     </button>
     <br /><br />
-    <button id="sendToSelf">Send 1 mutez to myself</button>
+    <button id="sendToSelf">Send 1 mumav to myself</button>
     <br /><br />
-    <button id="sendToSelfWithPrepare">Send 1 mutez to myself (with 1s prepare delay)</button>
+    <button id="sendToSelfWithPrepare">Send 1 mumav to myself (with 1s prepare delay)</button>
     <br /><br />
     <button id="showPrepareAndHide">Show prepare and then hide</button>
     <br /><br />
@@ -293,7 +293,7 @@
           operationDetails: [
             {
               kind: beacon.TezosOperationType.DELEGATION,
-              delegate: 'tz1MJx9vhaNRSimcuXPK2rW4fLccQnDAnVKJ'
+              delegate: 'mv1Qvep3UVZdGTV6cMQ9MHGexLNQ6oaNZmhj'
             }
           ]
         })
@@ -703,7 +703,7 @@
       // Add event listener to the button
       document.getElementById('sendNotification').addEventListener('click', () => {
         client
-          .sendNotification('Beacon Test', 'Message', '', 'xtz')
+          .sendNotification('Beacon Test', 'Message', '', 'mvrk')
           .then((res) => console.log('Notification Response', res))
       })
     </script>
