--- a/examples/wallet.html
+++ b/examples/wallet.html
@@ -118,7 +118,7 @@
               // const res = await client.registerPush(
               //   'https://webhook.site/37e64204-3058-41ea-b681-9466ec70a892', // TODO: Replace this with your own webhook
               //   publicKey,
-              //   'xtz',
+              //   'mvrk',
               //   Math.random().toString(),
               //   URL
               // )
